# steel-maritime

Steel-Maritime/: app.py  demurrage_model.py  models.py  ontology.py  pyproject.toml  replit.md
Steel-Maritime/templates/: analytics.html  base.html  dashboard.html  fleet.html  ontology.html  ports.html  voyage_planning.html
